<resources>
    <string name="app_name">Backgammon</string>
    <string name="roll">הטל</string>
    <string name="new_game">משחק חדש</string>
    <string name="resume_game">המשך לשחק</string>
    <string name="main_menu">תפריט ראשי</string>
    <string name="revert">בטל מהלך</string>
    <string name="the_winner_is">והמנצח הוא...</string>
    <string name="black">שחור</string>
    <string name="white">לבן</string>
    <string name="select_game_mode">בחר מצב משחק</string>
    <string name="pvp">שני שחקנים</string>
    <string name="pvai">נגד המחשב</string>
    <string name="white_turn">תור הלבן</string>
    <string name="black_turn">תור השחור</string>
    <string name="your_turn">תורך (הלבן)</string>
    <string name="opponent_turn">תור היריב (שחור)</string>
    <string name="no_available_moves">נחסם!</string>
    <string name="x_black_eaten">לשחור %d אכולים</string>
    <string name="x_white_eaten">ללבן %d אכולים</string>
</resources>