<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="320dp">

    <TextView
        android:id="@+id/select_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/rubik"
        android:text="@string/select_game_mode"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pvp_button"
        style="@style/regularButtonStyle"
        android:layout_width="250dp"
        android:layout_margin="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/pvp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_mode_title" />

    <Button
        android:id="@+id/pvai_button"
        style="@style/menuButtonStyle"
        android:text="@string/pvai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pvp_button" />

</androidx.constraintlayout.widget.ConstraintLayout>